# operating-systems

./: .gitignore  CMakeLists.txt
LasockiKarol/cw01/zad2/: main.c  makefile  raport2.txt
LasockiKarol/cw01/zad3/: makefile  results3a.txt  results3b.txt
LasockiKarol/cw02/zad1/: Makefile  main.c  test.sh  wyniki.txt
LasockiKarol/cw02/zad2/:  2019-03-16  main  main.c  makefile
LasockiKarol/cw03/zad1/: main.c
LasockiKarol/cw03/zad2/: makefile  monitor.c  tester.c
LasockiKarol/cw03/zad3/: makefile  monitor.c  tester.c
LasockiKarol/cw04/zad1/: date-script.sh  main.c  main_script.c  makefile
LasockiKarol/cw04/zad2/: makefile  monitor.c
LasockiKarol/cw04/zad3a/: catcher.c  makefile  sender.c
LasockiKarol/cw04/zad3b/: catcher.c  sender.c
LasockiKarol/cw05/zad1/: main.c  makefile
LasockiKarol/cw05/zad2/: makefile  master.c  slave.c
LasockiKarol/cw06/zad1/: chat.h  client.c  makefile  server.c
LasockiKarol/cw06/zad2/: chat.h  client.c  makefile  server.c  test.txt
LasockiKarol/cw07/zad1/: loader.c  makefile  spawner.c  trucker.c
LasockiKarol/cw07/zad2/: loader.c  makefile  trucker.c
LasockiKarol/cw08/: 33x33  3x3  65x65  Times.txt  filter_generator.py  filtered.ascii.pgm  main.c  makefile  test.sh
LasockiKarol/cw09/: main.c  main_cpy.c  makefile
LasockiKarol/cw10/zad1/: client.c  server.c
LasockiKarol/cw10/zad2/: client.c  makefile  server.c
cw01/zad1/: find_lib.c  makefile
cw01/zad2/: find_lib.c  find_lib.h  main.c  makefile  raport2.txt
cw01/zad3/: main.c  makefile
